# ididitfor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  litestream.dev.yml  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
.github/workflows/: docker.yml
app/: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.js
app/ididitfor/: asgi.py  settings.py
app/passkey_auth/: backend.py  views.py
app/passkey_auth/templates/_partials/: user_profile.html
app/static/: main.js  stopwatch.js  timer.js
app/static-src/: main.css
app/templates/: base.html  base_external.html  base_internal.html
app/templates/registration/: login.html  password_reset_complete.html  password_reset_done.html  password_reset_form.html
app/templates/snippets/: _logo.html  _profile.html  _sidebar.html
app/tracking/: admin.py  models.py  urls.py
app/tracking/migrations/: 0001_initial.py  0003_alter_goal_owner.py  0004_alter_session_goal.py
app/tracking/templates/: running_stopwatch_session.html  running_timer_session.html
app/tracking/templates/tracking/: goal_confirm_delete.html  goal_detail.html  goal_form.html  goal_list.html  goal_session_list.html  (+1 more)
ididitfor/: settings.py  urls.py  wsgi.py
passkey_auth/: backend.py  models.py  urls.py  views.py
passkey_auth/migrations/: 0001_initial.py  0002_alter_passkeycredential_user.py
passkey_auth/templates/: user_profile.html
static-src/: main.css
staticfiles/: main.js  passkey-login.js  passkey-register.js  stopwatch.js  timer.js
templates/: base.html  base_external.html  base_htmx.html  base_internal.html
templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
templates/snippets/: _logo.html  _nav_links.html  _profile.html  _sidebar.html
tracking/: forms.py  models.py  urls.py  views.py
tracking/migrations/: 0002_session_active_alter_goal_start_date_and_more.py  0005_rename_duration_min_goal_duration_mins.py  0006_alter_session_active.py
tracking/templates/: running_stopwatch_session.html  running_timer_session.html  session_stopwatch.html  start_timer_session.html
tracking/templates/tracking/: goal_detail.html  goal_form.html  goal_list.html  session_confirm_delete.html  session_detail.html  session_form.html
tracking/templatetags/: customfilters.py
(+24 files in other folders)
