[tool.poetry]
name = "ididitfor"
version = "0.1.0"
description = ""
authors = ["Rick Henry <rickhenry@rickhenry.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.1"
dj-database-url = "^2.0.0"
whitenoise = "^6.4.0"
webauthn = "^1.8.1"
django-htmx = "^1.15.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
djlint = "^1.30.0"
mypy = "^1.3.0"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.1"}
pylint = "^2.17.4"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
exclude = ["settings.py", "urls.py"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "ididitfor.settings"
